--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -143,7 +143,8 @@ a:active {
 /* ------- BUTTONS ------ */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -154,7 +155,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit]  {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -169,7 +171,9 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #cf6d17;
 }
 
@@ -473,3 +477,108 @@ cite img {
     padding: 5px 0;
 }
 
+/*--------------------------------------*/
+/* FORM */
+/*--------------------------------------*/
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+
+}
+
+textarea {
+    height: 100px;
+
+}
+
+input[text=checkbox] {
+    margin: 10px 5px 10px 0;
+
+}
+
+*:focus {outline: none;}
+
+/*--------------------------------------*/
+/* FORM */
+/*--------------------------------------*/
+
+footer {
+    background-color: rgba(3, 0, 0, 0.699);
+    padding: 50px;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: rgba(204, 204, 204, 0.541);
+    transition: color 02.s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color:#ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 180%;
+}
+
+.facebook {
+    color: #3b5998;
+}
+
+.google {
+    color: #dd4b39;
+}
+
+.instagram {
+    color: #8a3ab9;
+}
+
+.twitter {
+    color: #55acee;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 30px;
+}
