--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -516,6 +516,7 @@ input[text=checkbox] {
 footer {
     background-color: rgba(3, 0, 0, 0.699);
     padding: 50px;
+    font-size: 80%;
 }
 
 .footer-nav {
@@ -557,28 +558,34 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 180%;
+    font-size: 160%;
 }
 
-.facebook {
+.facebook,
+.google,
+.instagram,
+.twitter {
+    transition: color 0.2s;
+}
+
+.facebook:hover {
     color: #3b5998;
 }
 
-.google {
+.google:hover {
     color: #dd4b39;
 }
 
-.instagram {
+.instagram:hover {
     color: #8a3ab9;
 }
 
-.twitter {
+.twitter:hover {
     color: #55acee;
 }
 
 footer p {
     color: #888;
     text-align: center;
-    font-size: 90%;
-    margin-top: 30px;
+    margin-top: 20px;
 }
