--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,6 +133,7 @@ a:visited {
     border-bottom: 1px solid #e67e22;
     padding-bottom: 1px;
     border-bottom: 1px solid #e67e22;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -152,6 +153,7 @@ input[type=submit] {
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 
 }
@@ -196,6 +198,7 @@ input[type=submit]:active {
 /*--------------------------------------*/
 
     header {
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
         background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
         background-size: cover;
         background-position: center;
@@ -208,7 +211,8 @@ input[type=submit]:active {
         width: 1140px;
         top: 50%; 
         left: 50%;
-        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
     }
     
     .logo {
@@ -239,6 +243,7 @@ input[type=submit]:active {
         text-transform: uppercase;
         font-size: 90%;
         border-bottom: 2px solid transparent;
+        -webkit-transition: border-bottom 0.2s;
         transition: border-bottom 0.2s;
     }
 
@@ -289,13 +294,18 @@ input[type=submit]:active {
     opacity: 0.7;
     width: 100%;
     height: auto;
-    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 
 }
 
 .meal-photo img:hover {
-    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
     opacity: 1;
 }
 
@@ -378,6 +388,7 @@ input[type=submit]:active {
 /*--------------------------------------*/
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0 , 0 , 0.8)), to(rgba(0, 0 , 0 , 0.8))), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0 , 0 , 0.8), rgba(0, 0 , 0 , 0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -550,6 +561,7 @@ footer {
     text-decoration: none;
     border: 0;
     color: rgba(204, 204, 204, 0.541);
+    -webkit-transition: color 02.s;
     transition: color 02.s;
 }
 
@@ -567,6 +579,7 @@ footer {
 .google,
 .instagram,
 .twitter {
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
